Facet Filters: Fix up facet spacing.
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@71435 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/js/alfresco/documentlibrary/css/AlfDocumentFilters.css
+++ b/root/projects/slingshot/source/web/js/alfresco/documentlibrary/css/AlfDocumentFilters.css
@@ -6,14 +6,15 @@
 .alfresco-documentlibrary-AlfDocumentFilters:last-child {
   border-radius: 0 0 5px 5px;
   border-bottom: @standard-border;
+  margin-bottom: @standard-line-height;
 }
 
 .alfresco-documentlibrary-AlfDocumentFilters {
    border: @standard-border;
    width: 320px;
-   padding: 5px;
    border-bottom: none;
    display: block;
+   padding-top: @standard-line-height;
 }
 
 .alfresco-documentlibrary-AlfDocumentFilters.hidden {
