--- a/root/projects/slingshot/source/web/js/alfresco/search/css/FacetFilter.css
+++ b/root/projects/slingshot/source/web/js/alfresco/search/css/FacetFilter.css
@@ -3,6 +3,7 @@
    line-height: ceil(@small-font-size/@standard-line-height) * @standard-line-height;
    font-size: @small-font-size;
    list-style-type: none;
+   padding-bottom: @standard-line-height;
 }
 
 .alfresco-search-FacetFilter:last-child {
